--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "firebase": "^9.6.10",
     "firebase-tools": "^10.6.0",
     "react": "^18.0.0",
+    "react-auth-context": "^0.0.2",
     "react-dom": "^18.0.0",
     "react-dotenv": "^0.1.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
