--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase-tools": "^10.6.0",
     "react": "^18.0.0",
     "react-auth-context": "^0.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.3.0",
