--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.0",
     "firebase": "^9.6.10",
-    "firebase-tools": "^10.6.0",
     "react": "^18.0.0",
     "react-auth-context": "^0.0.2",
     "react-bootstrap": "^2.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.0.0",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firebase-tools": "^10.7.1"
   }
 }
